# Copyright (c) 2026 National Institute of Advanced Industrial Science and Technology (AIST)
# All rights reserved.
# This software is released under the MIT License.
# http://opensource.org/licenses/mit-license.php

add_subdirectory(2p5g)
add_subdirectory(5g)
add_subdirectory(7p5g)
add_subdirectory(10g)
add_subdirectory(swpmbus)
add_subdirectory(test)
